GNOME Bugzilla – Bug 698279
Crash when changing user account password
Last modified: 2013-04-26 13:48:38 UTC
Open the control center, go to user accounts, click the password of the current user, without doing changing anything click "Change" button, the control center ends up crashing. The wrong callback data is being use to trigger a callback.
Created attachment 241808 [details] [review] fix wrong user data pointer usage
One could argue that the "Change" button shouldn't be sensitive by default too.
Created attachment 241809 [details] [review] fix wrong user data pointer usage v2
Review of attachment 241809 [details] [review]: good to me will also fix https://bugzilla.gnome.org/show_bug.cgi?id=698130
Review of attachment 241809 [details] [review]: Totally correct. I had fixed the same bug in ae108c45f33ebdbc2b2b859df931786fa66b196b, I should have reviewed the whole file :/ Needs committing to gnome-3-6 (if we ever do another release), gnome-3-8 and master please.
Pushed to ALL THE BRANCHES!
*** Bug 698130 has been marked as a duplicate of this bug. ***