user-accounts: fix wrong user data pointer usage

https://bugzilla.gnome.org/show_bug.cgi?id=698279